kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: task-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
       containers:
       - name: frontend
         image: pradeepchouhan115/task-app-frontend:1.2
         ports:
         - containerPort: 80
         livenessProbe:
          httpGet:
              path: /health
              port: 80
          initialDelaySeconds: 20
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
         readinessProbe:
          httpGet:
              path: /ready
              port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
         startupProbe:
          httpGet:
            path: /health  
            port: 80
          failureThreshold: 30
          periodSeconds: 10
